# wasm-game-of-life

./: Cargo.toml  LICENSE
benches/: bench.rs
react/: package.json
react/src/UniverseControls/: README.md  UniverseControls.tsx  index.ts
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package.json
