[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Colin McCulloch <colin@zyzle.dev>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Zyzle/wasm-game-of-life.git"
description = "Built on the Rust WebAssembly tutorial"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.51"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.28"

[dependencies.web-sys]
version = "0.3.28"
features = [
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"
